--- a/notebooks/datascraping.ipynb
+++ b/notebooks/datascraping.ipynb
@@ -51,9 +51,14 @@
         "import pandas as pd\n",
         "from bs4 import BeautifulSoup\n",
         "from google.colab import files\n",
+        "import logging\n",
+        "\n",
+        "# Configure logging\n",
+        "logging.basicConfig(filename='datascraping.log', level=logging.INFO, format='%(asctime)s - %(levelname)s - %(message)s', datefmt='%Y-%m-%d %H:%M:%S')\n",
         "\n",
         "# Function to parse individual HTML files\n",
         "def parse_html_file(file_path):\n",
+        "    logging.info(f'Parsing HTML file: {file_path}')\n",
         "    with open(file_path, 'r', encoding='utf-8') as file:\n",
         "        soup = BeautifulSoup(file, 'html.parser')\n",
         "\n",
@@ -84,7 +89,7 @@
         "                'title': title_content,\n",
         "                'img': image_url\n",
         "            })\n",
-        "\n",
+        "        logging.info(f'Extracted {len(messages)} messages from {file_path}')\n",
         "        return messages\n",
         "\n",
         "# List of HTML files directly stored in the Colab root\n",
@@ -98,30 +103,36 @@
         "# Aggregate data from all HTML files\n",
         "all_messages = []\n",
         "for filename in html_files:\n",
-        "    all_messages.extend(parse_html_file(filename))\n",
+        "    try:\n",
+        "        all_messages.extend(parse_html_file(filename))\n",
+        "    except Exception as e:\n",
+        "        logging.error(f'Error parsing file {filename}: {e}')\n",
         "\n",
         "# Convert to DataFrame\n",
+        "logging.info('Converting extracted data to DataFrame')\n",
         "df = pd.DataFrame(all_messages)\n",
         "\n",
         "# Save to CSV\n",
+        "logging.info('Saving extracted data to CSV file')\n",
         "df.to_csv('extracted_data.csv', index=False)\n",
         "\n",
-        "\n",
         "# Download the CSV file\n",
+        "logging.info('Downloading the CSV file')\n",
         "files.download('extracted_data.csv')\n",
         "\n",
         "# Show the DataFrame\n",
+        "logging.info('Displaying the first few rows of the DataFrame')\n",
         "df.head()\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 275
+          "height": 206
         },
         "id": "nJZA4ba7qt4g",
-        "outputId": "c6be55fa-cfc9-4267-83d2-cc83e72e5807"
+        "outputId": "8f5a02e9-9364-4736-9e34-cd558753841b"
       },
-      "execution_count": 7,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "display_data",
@@ -182,7 +193,7 @@
               "<IPython.core.display.Javascript object>"
             ],
             "application/javascript": [
-              "download(\"download_ee8987c6-0137-4744-ae71-da4511ed0a12\", \"extracted_data.csv\", 554372)"
+              "download(\"download_8c901b5c-244e-4b71-b780-b26cd2cdff17\", \"extracted_data.csv\", 554372)"
             ]
           },
           "metadata": {}
@@ -214,7 +225,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-417a481a-1545-4211-8cfb-2e949ac555aa\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-63575d6d-1c67-4729-9c5d-b75518d96313\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -281,7 +292,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-417a481a-1545-4211-8cfb-2e949ac555aa')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-63575d6d-1c67-4729-9c5d-b75518d96313')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -333,12 +344,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-417a481a-1545-4211-8cfb-2e949ac555aa button.colab-df-convert');\n",
+              "        document.querySelector('#df-63575d6d-1c67-4729-9c5d-b75518d96313 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-417a481a-1545-4211-8cfb-2e949ac555aa');\n",
+              "        const element = document.querySelector('#df-63575d6d-1c67-4729-9c5d-b75518d96313');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -358,8 +369,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-68e0f593-a910-4991-9c81-536c53efe582\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-68e0f593-a910-4991-9c81-536c53efe582')\"\n",
+              "<div id=\"df-018b7492-e043-43f8-9784-feaddf212144\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-018b7492-e043-43f8-9784-feaddf212144')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -478,7 +489,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-68e0f593-a910-4991-9c81-536c53efe582 button');\n",
+              "        document.querySelector('#df-018b7492-e043-43f8-9784-feaddf212144 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -495,7 +506,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 11
         }
       ]
     },
@@ -505,9 +516,14 @@
         "import os\n",
         "import pandas as pd\n",
         "from bs4 import BeautifulSoup\n",
+        "import logging\n",
+        "\n",
+        "# Configure logging\n",
+        "logging.basicConfig(filename='datascraping.log', level=logging.INFO, format='%(asctime)s - %(levelname)s - %(message)s', datefmt='%Y-%m-%d %H:%M:%S')\n",
         "\n",
         "# Function to parse individual HTML files for messages\n",
         "def parse_message_html(file_path):\n",
+        "    logging.info(f'Parsing HTML file: {file_path}')\n",
         "    with open(file_path, 'r', encoding='utf-8') as file:\n",
         "        soup = BeautifulSoup(file, 'html.parser')\n",
         "\n",
@@ -539,6 +555,7 @@
         "                'img': image_url\n",
         "            })\n",
         "\n",
+        "        logging.info(f'Extracted {len(messages)} messages from {file_path}')\n",
         "        return messages\n",
         "\n",
         "# Directory where your HTML files are stored\n",
@@ -550,28 +567,101 @@
         "# Aggregate data from all HTML files\n",
         "all_messages = []\n",
         "for filename in html_files:\n",
-        "    all_messages.extend(parse_message_html(filename))\n",
+        "    try:\n",
+        "        all_messages.extend(parse_message_html(filename))\n",
+        "    except Exception as e:\n",
+        "        logging.error(f'Error parsing file {filename}: {e}')\n",
         "\n",
         "# Convert to DataFrame\n",
+        "logging.info('Converting extracted data to DataFrame')\n",
         "data = pd.DataFrame(all_messages)\n",
         "\n",
         "# Save to CSV\n",
+        "logging.info('Saving extracted data to CSV file')\n",
         "data.to_csv('extracted_data2.csv', index=False)\n",
+        "\n",
         "# Download the CSV file\n",
-        "# files.download('extracted_data2.csv')\n",
+        "logging.info('Downloading the CSV file')\n",
+        "files.download('extracted_data2.csv')\n",
+        "\n",
         "# Show the DataFrame\n",
-        "data.head()\n"
+        "logging.info('Displaying the first few rows of the DataFrame')\n",
+        "data.head()"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 293
+          "height": 206
         },
         "id": "iWPY87vrxmu2",
-        "outputId": "ab0d9c56-4850-4f22-94d5-fed5dd1e17e7"
+        "outputId": "047457a3-6966-4b32-d7ad-d7b9ea2cda02"
       },
-      "execution_count": 10,
+      "execution_count": 12,
       "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ],
+            "application/javascript": [
+              "\n",
+              "    async function download(id, filename, size) {\n",
+              "      if (!google.colab.kernel.accessAllowed) {\n",
+              "        return;\n",
+              "      }\n",
+              "      const div = document.createElement('div');\n",
+              "      const label = document.createElement('label');\n",
+              "      label.textContent = `Downloading \"${filename}\": `;\n",
+              "      div.appendChild(label);\n",
+              "      const progress = document.createElement('progress');\n",
+              "      progress.max = size;\n",
+              "      div.appendChild(progress);\n",
+              "      document.body.appendChild(div);\n",
+              "\n",
+              "      const buffers = [];\n",
+              "      let downloaded = 0;\n",
+              "\n",
+              "      const channel = await google.colab.kernel.comms.open(id);\n",
+              "      // Send a message to notify the kernel that we're ready.\n",
+              "      channel.send({})\n",
+              "\n",
+              "      for await (const message of channel.messages) {\n",
+              "        // Send a message to notify the kernel that we're ready.\n",
+              "        channel.send({})\n",
+              "        if (message.buffers) {\n",
+              "          for (const buffer of message.buffers) {\n",
+              "            buffers.push(buffer);\n",
+              "            downloaded += buffer.byteLength;\n",
+              "            progress.value = downloaded;\n",
+              "          }\n",
+              "        }\n",
+              "      }\n",
+              "      const blob = new Blob(buffers, {type: 'application/binary'});\n",
+              "      const a = document.createElement('a');\n",
+              "      a.href = window.URL.createObjectURL(blob);\n",
+              "      a.download = filename;\n",
+              "      div.appendChild(a);\n",
+              "      a.click();\n",
+              "      div.remove();\n",
+              "    }\n",
+              "  "
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ],
+            "application/javascript": [
+              "download(\"download_c17742a0-f4a3-4337-91ce-0445daef401a\", \"extracted_data2.csv\", 57906)"
+            ]
+          },
+          "metadata": {}
+        },
         {
           "output_type": "execute_result",
           "data": {
@@ -599,7 +689,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-7f3e1bdf-ff85-4cc7-8b61-614d774303d0\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-051f78e4-af31-4522-a739-e06b39907bda\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -666,7 +756,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-7f3e1bdf-ff85-4cc7-8b61-614d774303d0')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-051f78e4-af31-4522-a739-e06b39907bda')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -718,12 +808,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-7f3e1bdf-ff85-4cc7-8b61-614d774303d0 button.colab-df-convert');\n",
+              "        document.querySelector('#df-051f78e4-af31-4522-a739-e06b39907bda button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-7f3e1bdf-ff85-4cc7-8b61-614d774303d0');\n",
+              "        const element = document.querySelector('#df-051f78e4-af31-4522-a739-e06b39907bda');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -743,8 +833,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-67a7de79-b68f-472a-bdc2-e6247cdc1a17\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-67a7de79-b68f-472a-bdc2-e6247cdc1a17')\"\n",
+              "<div id=\"df-91657742-4ac8-4f0a-af71-7d2eb950da4d\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-91657742-4ac8-4f0a-af71-7d2eb950da4d')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -863,7 +953,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-67a7de79-b68f-472a-bdc2-e6247cdc1a17 button');\n",
+              "        document.querySelector('#df-91657742-4ac8-4f0a-af71-7d2eb950da4d button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -880,7 +970,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 12
         }
       ]
     }
